--- a/.jx/gitops/source-config.yaml
+++ b/.jx/gitops/source-config.yaml
@@ -8,6 +8,7 @@ spec:
     provider: https://github.com
     providerKind: github
     repositories:
+    - name: quickstart-2
     - name: quickstart-test-go-http
     scheduler: in-repo
   slack:
