chore: import repository https://github.com/rajatgupta24/quickstart-3.git
this commit will trigger a pipeline to [generate the CI/CD configuration](https://jenkins-x.io/v3/about/how-it-works/#importing--creating-quickstarts) which will create a second commit on this Pull Request before it auto merges

--- a/.jx/gitops/source-config.yaml
+++ b/.jx/gitops/source-config.yaml
@@ -9,6 +9,7 @@ spec:
     providerKind: github
     repositories:
     - name: quickstart-2
+    - name: quickstart-3
     - name: quickstart-test-go-http
     scheduler: in-repo
   slack:
